syntax = "proto3";

package iam;

option go_package = "grpc";

// GroupService is the GRPC service for managing groups.
service GroupService {
    rpc ProvisionGroup(ProvisionGroupRequest) returns (ProvisionGroupResponse) {}
    rpc AddGroupToGroup(AddGroupToGroupRequest) returns (AddGroupToGroupResponse) {}
    rpc RemoveGroupFromGroup(RemoveGroupFromGroupRequest) returns (RemoveGroupFromGroupResponse) {}
    rpc AddUserToGroup(AddUserToGroupRequest) returns (AddUserToGroupResponse) {}
    rpc RemoveUserFromGroup(RemoveUserFromGroupRequest) returns (RemoveUserFromGroupResponse) {}
}

message ProvisionGroupRequest {
    string tenant_id = 1;
    string group_name = 2;
    string description = 3;
}

message ProvisionGroupResponse {}

message AddGroupToGroupRequest {
    string tenant_id = 1;
    string group_name = 2;
    string nested_group_name = 3;
}

message AddGroupToGroupResponse {}

message RemoveGroupFromGroupRequest {
    string tenant_id = 1;
    string group_name = 2;
    string nested_group_name = 3;
}

message RemoveGroupFromGroupResponse {}

message AddUserToGroupRequest {
    string tenant_id = 1;
    string group_name = 2;
    string username = 3;
}

message AddUserToGroupResponse {}

message RemoveUserFromGroupRequest {
    string tenant_id = 1;
    string group_name = 2;
    string username = 3;
}

message RemoveUserFromGroupResponse {}